Add hex, crypto-hash and byteorder crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Tony Rizko <tony@rizkocircle.com>"]
 
 [dependencies]
+hex = "0.3.1"
+crypto-hash = "0.3.1"
+byteorder = "1.2.3"
